# npe-NS

./: .dockerignore  .gitignore  Dockerfile  README.md  generate_dataset.sh  launch_batch_job.sh  pyproject.toml  train_network.sh
eppe/: __init__.py  dataset_generator.py  dataset_generator_ppe.py  dataset_generator_ppe_bounds.py  dataset_generator_scottlike.py  network.py
eppe/utils/: __init__.py  conversion.py  lal_utils.py  modified_gr_betas.py  modified_gr_utils.py
etc/: dcs-dataset-generator-lin-space-geom-freq.sh  dcs-dataset-generator-log-space-geom-freq.sh  edgb-dataset-generator-300-hz.sh  edgb-dataset-generator-log-space-geom-freq.sh  gr-dataset-generator-log-space-geom-freq.sh  ppe-gr-dataset-generator-log-space-geom-freq-minus-gr.sh  ppe-minus1-saturate-dataset-generator-log-space-geom-freq-minus-gr.sh  ppe-minus13-saturate-dataset-generator-log-space-geom-freq-minus-gr.sh  ppe-minus3-saturate-dataset-generator-log-space-geom-freq-minus-gr.sh  ppe-minus5-saturate-dataset-generator-log-space-geom-freq-minus-gr.sh  ppe-minus7-saturate-dataset-generator-log-space-geom-freq-minus-gr.sh  ppe-minus9-saturate-dataset-generator-log-space-geom-freq-minus-gr.sh
etc/ppe-bounds-m5to30-fnum640/: ppe-minus1.sh  ppe-minus11.sh  ppe-minus13.sh  ppe-minus3.sh  ppe-minus5.sh  ppe-minus7.sh  ppe-minus9.sh
etc/ppe-labels-only-saturate-perturb-m5to30/: ppe-gr.sh  ppe-minus1.sh  ppe-minus13.sh  ppe-minus3.sh  ppe-minus5.sh  (+1 more)
npe/: generate_dataset.py  train_network.py  waveform_analysis.py
tests/: test_lal_utils.py  test_modified_gr_utils.py  test_neural_models.py
(+8 files in other folders)
