[tool.poetry]
name = "eppE"
version = "0.1.0"
description = "Extended parameterized-post Einstein framework"
authors = ["Deep Chatterjee <deep.chatterjee@ligo.org>"]

[tool.poetry.dependencies]
python = "^3.7"
astropy = ">=4.0"
pandas = ">=1.0"

[tool.poetry.scripts]
eppe-create-dataset = 'eppe.dataset_generator:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
